--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -102,6 +102,7 @@
     <string name="title_fpermission">Berechtigungen</string>
     <string name="title_frestricted">Beschränkungen</string>
     <string name="title_fuser">Nach Benutzer-Apps filtern</string>
+    <string name="title_fondemand">Filter by on-demand</string>
     <string name="title_fsystem">Nach System-Apps filtern</string>
     <string name="title_fnot">Negieren</string>
     <string name="title_sname">By name</string>
