--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -103,6 +103,7 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
     <string name="title_fpermission">Filter on permission</string>
     <string name="title_frestricted">Filter on restricted</string>
     <string name="title_fuser">Filter on user applications</string>
+    <string name="title_fondemand">Filter by on-demand</string>
     <string name="title_fsystem">Filter on system applications</string>
     <string name="title_fnot">Negate</string>
     <string name="title_sname">By name</string>
