--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -102,6 +102,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="title_fpermission">Filter on permission</string>
     <string name="title_frestricted">Filter on restricted</string>
     <string name="title_fuser">Filter on user applications</string>
+    <string name="title_fondemand">Filter by on-demand</string>
     <string name="title_fsystem">Filter on system applications</string>
     <string name="title_fnot">Negate</string>
     <string name="title_sname">By name</string>
