--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -102,6 +102,7 @@
     <string name="title_fpermission">с разрешениями</string>
     <string name="title_frestricted">запрещенные</string>
     <string name="title_fuser">пользовательские приложения</string>
+    <string name="title_fondemand">Filter by on-demand</string>
     <string name="title_fsystem">системные приложения</string>
     <string name="title_fnot">Переключить</string>
     <string name="title_sname">By name</string>
