--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -102,6 +102,7 @@
     <string name="title_fpermission">含有权限</string>
     <string name="title_frestricted">限制使用</string>
     <string name="title_fuser">用户应用</string>
+    <string name="title_fondemand">Filter by on-demand</string>
     <string name="title_fsystem">系统应用</string>
     <string name="title_fnot">←反选</string>
     <string name="title_sname">By name</string>
