--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -69,7 +69,6 @@
     <string name="msg_randomizing" formatted="false">Willekeurig %s</string>
     <string name="msg_upgrading" formatted="false">Bijwerken %s</string>
     <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
-    <string name="msg_ondemand" formatted="false">%1$s probeert %3$s in de categorie %2$s te gebruiken</string>
     <string name="msg_restrictedby">Beperkt door XPrivacy</string>
     <string name="msg_first"><b>XPrivacy is zorgvuldig ontwikkeld en getest,
 maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke applicatie foutloos werkt.
@@ -111,6 +110,10 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_supdated">Op datum bijgewerkt</string>
     <string name="title_smodified">Op datum gewijzigd (XPrivacy)</string>
     <string name="title_sinvert">Omgekeerde sorteervolgorde</string>
+    <string name="title_attempt">Usage attempt of:</string>
+    <string name="title_category">Category:</string>
+    <string name="title_function">Function:</string>
+    <string name="title_parameters">Parameters:</string>
     <string name="title_applycat">Pas toe op gehele categorie</string>
     <string name="title_once">Één keer voor %1$s seconden</string>
     <string name="title_allow">Toestaan</string>
