--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -69,7 +69,6 @@
     <string name="msg_randomizing" formatted="false">Losowanie %s</string>
     <string name="msg_upgrading" formatted="false">Aktualizacja %s</string>
     <string name="msg_support_info">Wewnętrzna kontrola się nie powiodła. Czy chcesz wysłać informacje do supportu?</string>
-    <string name="msg_ondemand" formatted="false">%1$s is trying to use %3$s in the %2$s category</string>
     <string name="msg_restrictedby">Ograniczone przez XPrivacy</string>
     <string name="msg_first"><b>Dołożyliśmy wszelkich starań podczas programowania i testów XPrivacy.
     Jednak nie możemy zagwarantować, że będzie on działać bezbłędnie na każdym urządzeniu oraz z każdą aplikacją.
@@ -111,6 +110,10 @@
     <string name="title_supdated">Po dacie aktualizacji</string>
     <string name="title_smodified">Po dacie modyfikacji (XPrivacy)</string>
     <string name="title_sinvert">Odwróć porządek sortowania</string>
+    <string name="title_attempt">Usage attempt of:</string>
+    <string name="title_category">Category:</string>
+    <string name="title_function">Function:</string>
+    <string name="title_parameters">Parameters:</string>
     <string name="title_applycat">Zastosuj do całej kategorii</string>
     <string name="title_once">Jednorazowo na %1$s sekund</string>
     <string name="title_allow">Pozwól</string>
