Fixed lock, improved on demand dialog layout, retricted by .. category/method, updated changelog

--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -105,20 +105,20 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_fsystem">Filter op systeemapplicaties</string>
     <string name="title_fnot">Negatief</string>
     <string name="title_sname">Op naam</string>
-    <string name="title_suid">Op uid</string>
+    <string name="title_suid">Op UID</string>
     <string name="title_sinstalled">Op datum geïnstalleerd</string>
     <string name="title_supdated">Op datum bijgewerkt</string>
     <string name="title_smodified">Op datum gewijzigd (XPrivacy)</string>
     <string name="title_sinvert">Omgekeerde sorteervolgorde</string>
-    <string name="title_attempt">Usage attempt of:</string>
-    <string name="title_category">Category:</string>
-    <string name="title_function">Function:</string>
+    <string name="title_attempt">Poging tot gebruik van:</string>
+    <string name="title_category">Categorie:</string>
+    <string name="title_function">Functie:</string>
     <string name="title_parameters">Parameters:</string>
     <string name="title_applycat">Pas toe op gehele categorie</string>
     <string name="title_once">Één keer voor %1$s seconden</string>
     <string name="title_allow">Toestaan</string>
     <string name="title_deny">Blokkeren</string>
-    <string name="title_pleasesubmit">Stuur a.u.b. uw beperkingen om anderen te helpen</string>
+    <string name="title_pleasesubmit">Stuur a.u.b. uw beperkingen op om anderen te helpen</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
