--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -21,10 +21,10 @@
     <string name="menu_pro">Pro versie</string>
     <string name="menu_about">Over</string>
     <string name="menu_help">Help</string>
-    <string name="menu_select_all">Select all</string>
+    <string name="menu_select_all">Selecteer allen</string>
     <string name="menu_sort">Sorteer</string>
     <string name="menu_filter">Filter</string>
-    <string name="menu_all">Alle</string>
+    <string name="menu_all">Allen</string>
     <string name="menu_restriction_all">Schakel beperkingen</string>
     <string name="menu_clear_all">Alles wissen</string>
     <string name="menu_restrict_all">Alles beperken</string>
@@ -62,13 +62,13 @@
     <string name="msg_random_access">Willekeurig bij gebruik</string>
     <string name="msg_random_boot">Willekeurig na herstart</string>
     <string name="msg_restart">Applicatie herstart vereist</string>
-    <string name="msg_register">Registreer a.u.b. uw apparaat</string>
+    <string name="msg_register">Registreer uw apparaat a.u.b.</string>
     <string name="msg_registered">Controleer uw e-mail om uw apparaat te activeren</string>
     <string name="msg_service">Bijwerkdienst actief</string>
     <string name="msg_migrating" formatted="false">Migratie %s</string>
     <string name="msg_randomizing" formatted="false">Willekeurig %s</string>
     <string name="msg_upgrading" formatted="false">Bijwerken %s</string>
-    <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
+    <string name="msg_support_info">Een interne controle faalde, wilt u de ondersteuningsinformatie sturen?</string>
     <string name="msg_restrictedby">Beperkt door XPrivacy</string>
     <string name="msg_first"><b>XPrivacy is zorgvuldig ontwikkeld en getest,
 maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke applicatie foutloos werkt.
@@ -102,7 +102,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_fpermission">Filter op rechten</string>
     <string name="title_frestricted">Filter op beperkingen</string>
     <string name="title_fuser">Filter op gebruikersapplicaties</string>
-    <string name="title_fondemand">Filter by on-demand</string>
+    <string name="title_fondemand">Filter opy on-demand</string>
     <string name="title_fsystem">Filter op systeemapplicaties</string>
     <string name="title_fnot">Negatief</string>
     <string name="title_sname">Op naam</string>
