--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Translators: do not include texts with translatable="false" -->
     <string name="app_name" translatable="false">XPrivacy</string>
@@ -79,31 +79,31 @@
     <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
 however it is impossible to guarantee it will work flawlessly on each and every device and for each and every application.
 \n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
-    <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
-    <string name="restrict_browser">Browser (bookmarks/history)</string>
-    <string name="restrict_calendar">Calendar</string>
-    <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
-    <string name="restrict_clipboard">Clipboard</string>
-    <string name="restrict_contacts">Contacts</string>
-    <string name="restrict_dictionary">Dictionary (user)</string>
-    <string name="restrict_email">E-mail</string>
-    <string name="restrict_identification">Identification (device)</string>
-    <string name="restrict_internet">Internet</string>
-    <string name="restrict_ipc" translatable="false">IPC</string>
-    <string name="restrict_location">Location (fine/coarse)</string>
-    <string name="restrict_media">Media (audio, photo, video)</string>
-    <string name="restrict_messages">Messages (SMS, MMS)</string>
-    <string name="restrict_network">Network (addresses)</string>
-    <string name="restrict_nfc" translatable="false">NFC</string>
-    <string name="restrict_notifications">Notifications</string>
-    <string name="restrict_overlay">Overlay</string>
-    <string name="restrict_phone">Phone (ID, numbers, calls)</string>
-    <string name="restrict_sensors">Sensors</string>
-    <string name="restrict_storage">Storage (media, SD card)</string>
-    <string name="restrict_shell">Shell (commands, superuser)</string>
-    <string name="restrict_system">System (installed apps)</string>
-    <string name="restrict_view">View (browser)</string>
-    <string name="title_categories">Categories</string>
+    <string name="restrict_accounts" tools:ignore="UnusedResources">Accounts (Google, Facebook, etc)</string>
+    <string name="restrict_browser" tools:ignore="UnusedResources">Browser (bookmarks/history)</string>
+    <string name="restrict_calendar" tools:ignore="UnusedResources">Calendar</string>
+    <string name="restrict_calling" tools:ignore="UnusedResources">Calling (phone, SMS, MMS)</string>
+    <string name="restrict_clipboard" tools:ignore="UnusedResources">Clipboard</string>
+    <string name="restrict_contacts" tools:ignore="UnusedResources">Contacts</string>
+    <string name="restrict_dictionary" tools:ignore="UnusedResources">Dictionary (user)</string>
+    <string name="restrict_email" tools:ignore="UnusedResources">E-mail</string>
+    <string name="restrict_identification" tools:ignore="UnusedResources">Identification (device)</string>
+    <string name="restrict_internet" tools:ignore="UnusedResources">Internet</string>
+    <string name="restrict_ipc" translatable="false" tools:ignore="UnusedResources">IPC</string>
+    <string name="restrict_location" tools:ignore="UnusedResources">Location (fine/coarse)</string>
+    <string name="restrict_media" tools:ignore="UnusedResources">Media (audio, photo, video)</string>
+    <string name="restrict_messages" tools:ignore="UnusedResources">Messages (SMS, MMS)</string>
+    <string name="restrict_network" tools:ignore="UnusedResources">Network (addresses)</string>
+    <string name="restrict_nfc" translatable="false" tools:ignore="UnusedResources">NFC</string>
+    <string name="restrict_notifications" tools:ignore="UnusedResources">Notifications</string>
+    <string name="restrict_overlay" tools:ignore="UnusedResources">Overlay</string>
+    <string name="restrict_phone" tools:ignore="UnusedResources">Phone (ID, numbers, calls)</string>
+    <string name="restrict_sensors" tools:ignore="UnusedResources">Sensors</string>
+    <string name="restrict_storage" tools:ignore="UnusedResources">Storage (media, SD card)</string>
+    <string name="restrict_shell" tools:ignore="UnusedResources">Shell (commands, superuser)</string>
+    <string name="restrict_system" tools:ignore="UnusedResources">System (installed apps)</string>
+    <string name="restrict_view" tools:ignore="UnusedResources">View (browser)</string>
+    <string name="title_categories" tools:ignore="UnusedResources">Categories</string>
     <string name="title_restrict">Check to restrict:</string>
     <string name="title_fused">Filter on data usage</string>
     <string name="title_finternet">Filter on internet access</string>
